Estilização e ajustes nas telas de lista de produtos, edição de produto e detalhe de produto

--- a/Views/Categorias/Create.cshtml
+++ b/Views/Categorias/Create.cshtml
@@ -57,8 +57,8 @@
 
     <div class="linha">
         <label>NOME:</label>
-        <input asp-for="nome" />
-        <span asp-validation-for="nome" class="text-danger"></span>
+        <input asp-for="Nome" />
+        <span asp-validation-for="Nome" class="text-danger"></span>
     </div>
 
     <div class="linha">
