--- a/Views/Produtos/Delete.cshtml
+++ b/Views/Produtos/Delete.cshtml
@@ -13,7 +13,7 @@
         <dd class="col-sm-9">@Model.Nome</dd>
 
         <dt class="col-sm-3">Categoria</dt>
-        <dd class="col-sm-9">@Model.Categoria?.nome</dd>
+        <dd class="col-sm-9">@Model.Categoria?.Nome</dd>
 
         <dt class="col-sm-3">Preço</dt>
         <dd class="col-sm-9">@Model.Preco.ToString("C")</dd>
