Estilização e ajustes na tela de exibição dos registros de movimentação, bem como alguns ajustes nas telas de detalhes e exclusão, vinculadas ao registro de produtos

--- a/Views/Produtos/Details.cshtml
+++ b/Views/Produtos/Details.cshtml
@@ -97,20 +97,15 @@
     </div>
 
 
-<!-- BOTÕES -->
+    <!-- BOTÕES -->
     <div class="linha linha-botoes-horizontal">
 
-        <a asp-action="Edit" asp-route-id="@Model.Id" class="btn-cadastrar-produto">
-            EDITAR
-        </a>
-
-        <button type="button" onclick="history.back()" class="btn-cadastrar-produto btn-secundario">
+        <button type="button" onclick="history.back()" 
+                class="btn-cadastrar-produto btn-secundario">
             VOLTAR
         </button>
 
     </div>
-    
-
 
     <!-- RODAPÉ FIXO -->
     <footer class="menu-footer">
