Ajuste na tela de estoque separando em consulta e resultado, ajustes nos botões das telas de cadastro de produto e de exibição de movimentações de estoque

--- a/Views/Home/Menu.cshtml
+++ b/Views/Home/Menu.cshtml
@@ -37,7 +37,7 @@
 
         <a href="/Produtos/Create" class="menu-btn">CADASTRAR<br/>PRODUTO</a>
 
-        <a href="/Estoque/Index" class="menu-btn">CONSULTAR<br/>ESTOQUE</a>
+        <a href="/Estoque/Consulta" class="menu-btn">CONSULTAR<br/>ESTOQUE</a>
 
         <a href="/Movimentacoes/Create" class="menu-btn">
             REGISTRAR<br/>ENTRADA/SAÍDA
