--- a/Views/Movimentacoes/Index.cshtml
+++ b/Views/Movimentacoes/Index.cshtml
@@ -71,9 +71,11 @@
 
         </div>
 
-        <div>
+        <div class="linha linha-botoes-horizontal">
             <a asp-action="Create" class="btn-novo-produto" type="submit">REGISTRAR NOVA MOVIMENTAÇÃO</a>
         </div>
+        <!-- BOTÕES -->
+    
 
     </div>
 
