--- a/Views/Produtos/Index.cshtml
+++ b/Views/Produtos/Index.cshtml
@@ -101,7 +101,7 @@
 
         </div>
 
-        <div>
+        <div class="linha linha-botoes-horizontal">
             <a asp-action="Create" class="btn-novo-produto" type="submit">CADASTRAR NOVO PRODUTO</a>
         </div>
 
